--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -217,10 +217,19 @@
    "outputs": [],
    "source": [
     "def five_num_summ(items):\n",
-    "\n",
-    "  ### Code Here\n",
-    "\n",
-    "  pass"
+    "    track = metrics(gauteng)\n",
+    "    \n",
+    "    big = track['max']\n",
+    "    median = track['median']\n",
+    "    small = track['min']\n",
+    "    q1= 1/4 *((len(items) + 1)\n",
+    "    q3= 3/4 *((len(items) + 1)\n",
+    "    \n",
+    "    dictionary={'max':round(big,2),\n",
+    "               'median':round(median,2),\n",
+    "               'min': round(small,2)}\n",
+    "        \n",
+    "    return dictionary"
    ]
   },
   {
