--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -384,8 +384,12 @@
    "outputs": [],
    "source": [
     "def number_of_tweets_per_day(df):\n",
+    "import pandas as pd\n",
     "\n",
-    "  ### Code Here\n",
+    "    df['Split_Tweets']=df[\"Tweets\"].str.lower()\n",
+    "\n",
+    "    df[\"Split_Tweets\"]=df[\"Split_Tweets\"].str.split(' ')\n",
+    "    return df\n",
     "\n",
     "  pass"
    ]
