Mistake on Function 6 Corrected
Mistake Corrected

--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -386,7 +386,7 @@
     "def number_of_tweets_per_day(df):\n",
     "  \n",
     "\n",
-    " "
+    " pass"
    ]
   },
   {
@@ -394,9 +394,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def number_of_tweets_per_day(df)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
