--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -143,6 +143,7 @@
    "outputs": [],
    "source": [
     "def dictionary_of_metrics(item):\n",
+    "    \n",
     "    mean=sum(item)/len(item)\n",
     "    \n",
     "    item.sort()\n",
@@ -168,6 +169,13 @@
     "               'max':round(big,2)}\n",
     "    return dictionary"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -208,13 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "uZUUmnL1JWFr"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-4559174dde0c>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-20-4559174dde0c>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    q3= 3/4 *((len(items) + 1)\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def five_num_summ(items):\n",
     "    track = metrics(gauteng)\n",
@@ -222,8 +239,8 @@
     "    big = track['max']\n",
     "    median = track['median']\n",
     "    small = track['min']\n",
-    "    q1= 1/4 *((len(items) + 1)\n",
-    "    q3= 3/4 *((len(items) + 1)\n",
+    "    firstquart= 1/4 *((len(items) + 1)\n",
+    "    lastquart= 3/4 *((len(items) + 1)\n",
     "    \n",
     "    dictionary={'max':round(big,2),\n",
     "               'median':round(median,2),\n",
