--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -401,9 +401,11 @@
    "outputs": [],
    "source": [
     "def number_of_tweets_per_day(df):\n",
-    "  \n",
-    "\n",
-    " pass"
+    "    truth=[]\n",
+    "    for i in dates:\n",
+    "        prince=i.split(' ')\n",
+    "        truth.append(prince[0])\n",
+    "    return truth"
    ]
   },
   {
