--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -294,9 +294,11 @@
    "source": [
     "def date_parser(list_dates):\n",
     "\n",
-    "  ### Code Here\n",
-    "\n",
-    "  pass"
+    "    truth=[]\n",
+    "    for i in dates:\n",
+    "        prince=i.split(' ')\n",
+    "        truth.append(prince[0])\n",
+    "    return truth"
    ]
   },
   {
@@ -400,12 +402,7 @@
    },
    "outputs": [],
    "source": [
-    "def number_of_tweets_per_day(df):\n",
-    "    truth=[]\n",
-    "    for i in dates:\n",
-    "        prince=i.split(' ')\n",
-    "        truth.append(prince[0])\n",
-    "    return truth"
+    "def number_of_tweets_per_day(df):\n"
    ]
   },
   {
