--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -361,9 +361,10 @@
    "source": [
     "def extract_municipality_hashtags(df):\n",
     "\n",
-    "  ### Code Here\n",
-    "\n",
-    "  pass"
+    "    twitter_df['Dates']=twitter_df['Date'].apply(lambda x : x.split(' ')[0])\n",
+    "    nasty=twitter_df.drop(columns=['Date'])\n",
+    "    bass=nasty.groupby(nasty['Dates']).count()\n",
+    "    return bass"
    ]
   },
   {
