--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -458,10 +458,9 @@
    "outputs": [],
    "source": [
     "def word_spliter(df):\n",
-    "    import pandas as pd\n",
-    "    df['Split_Tweets']=df[\"Tweets\"].str.lower()\n",
-    "    df[\"Split_Tweets\"]=df[\"Split_Tweets\"].str.split(' ')\n",
-    "    return df"
+    "  twitter_df['Split_tweets']=twitter_df['Tweets'].str.split(' ')\n",
+    "    twitter_df['Split_tweets']=twitter_df['Split_tweets'].apply(lambda x: list(map(str.lower,x)))\n",
+    "    return twitter_df"
    ]
   },
   {
