--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -216,22 +216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "uZUUmnL1JWFr"
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-4559174dde0c>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-20-4559174dde0c>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    q3= 3/4 *((len(items) + 1)\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def five_num_summ(items):\n",
     "    track = metrics(gauteng)\n",
@@ -239,8 +230,8 @@
     "    big = track['max']\n",
     "    median = track['median']\n",
     "    small = track['min']\n",
-    "    firstquart= 1/4 *((len(items) + 1)\n",
-    "    lastquart= 3/4 *((len(items) + 1)\n",
+    "    firstquart= 1/4 *((len(items) + 1))\n",
+    "    lastquart= 3/4 *((len(items) + 1))\n",
     "    \n",
     "    dictionary={'max':round(big,2),\n",
     "               'median':round(median,2),\n",
