--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -394,7 +394,11 @@
    },
    "outputs": [],
    "source": [
-    "def number_of_tweets_per_day(df):\n"
+    "def number_of_tweets_per_day(df):\n",
+    "    twitter_df['Dates']=twitter_df['Date'].apply(lambda x : x.split(' ')[0])\n",
+    "    nasty=twitter_df.drop(columns=['Date'])\n",
+    "    bass=nasty.groupby(nasty['Dates']).count()\n",
+    "    return bass"
    ]
   },
   {
