--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -395,18 +395,115 @@
    "outputs": [],
    "source": [
     "def number_of_tweets_per_day(df):\n",
+    "    #checking the no. of tweets a day\n",
     "    twitter_df['Dates']=twitter_df['Date'].apply(lambda x : x.split(' ')[0])\n",
     "    nasty=twitter_df.drop(columns=['Date'])\n",
     "    bass=nasty.groupby(nasty['Dates']).count()\n",
+    "    \n",
     "    return bass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tweets</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dates</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2019-11-20</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019-11-21</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019-11-22</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019-11-23</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019-11-24</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019-11-25</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019-11-26</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019-11-27</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019-11-28</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019-11-29</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Tweets\n",
+       "Dates             \n",
+       "2019-11-20      18\n",
+       "2019-11-21      11\n",
+       "2019-11-22      25\n",
+       "2019-11-23      19\n",
+       "2019-11-24      14\n",
+       "2019-11-25      20\n",
+       "2019-11-26      32\n",
+       "2019-11-27      13\n",
+       "2019-11-28      32\n",
+       "2019-11-29      16"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_of_tweets_per_day(twitter_df)"
+   ]
   },
   {
    "cell_type": "markdown",
