--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -742,10 +742,57 @@
    "source": [
     "def stop_words_http_remover(df):\n",
     "\n",
-    "  # Code Here\n",
     "\n",
-    "  pass"
+    "    \n",
+    "    stop_words_dict = {'stopwords':['where', 'done', 'if', 'before', 'll', 'very', 'keep', 'something', 'nothing',\n",
+    "                                    'thereupon', 'may', 'why', '’s', 'therefore', 'you', 'with', 'towards', 'make', \n",
+    "                                    'really', 'few', 'former', 'during', 'mine', 'do', 'would', 'of', 'off', 'six', \n",
+    "                                    'yourself', 'becoming', 'through', 'seeming', 'hence', 'us', 'anywhere', 'regarding', \n",
+    "                                    'whole', 'down', 'seem', 'whereas', 'to', 'their', 'various', 'thereafter', '‘d', \n",
+    "                                    'above', 'put', 'sometime', 'moreover', 'whoever', 'although', 'at', 'four', 'each', \n",
+    "                                    'among', 'whatever', 'any', 'anyhow', 'herein', 'become', 'last', 'between', 'still',\n",
+    "                                    'was', 'almost', 'twelve', 'used', 'who', 'go', 'not', 'enough', 'well', '’ve', 'might',\n",
+    "                                    'see', 'whose', 'everywhere', 'yourselves', 'across', 'myself', 'further', 'did', 'then', \n",
+    "                                    'is', 'except', 'up', 'take', 'became', 'however', 'many', 'thence', 'onto', '‘m', 'my',\n",
+    "                                    'own', 'must', 'wherein', 'elsewhere', 'behind', 'becomes', 'alone', 'due', 'being',\n",
+    "                                    'neither', 'a', 'over', 'beside', 'fifteen', 'meanwhile', 'upon', 'next', 'forty', \n",
+    "                                    'what', 'less', 'and', 'please', 'toward', 'about', 'below', 'hereafter', 'whether', \n",
+    "                                    'yet', 'nor', 'against', 'whereupon', 'top', 'first', 'three', 'show', 'per', 'five', \n",
+    "                                    'two', 'ourselves', 'whenever', 'get', 'thereby', 'noone', 'had', 'now', 'everyone', \n",
+    "                                    'everything', 'nowhere', 'ca', 'though', 'least', 'so', 'both', 'otherwise', 'whereby', \n",
+    "                                    'unless', 'somewhere', 'give', 'formerly', '’d', 'under', 'while', 'empty', 'doing', \n",
+    "                                    'besides', 'thus', 'this', 'anyone', 'its', 'after', 'bottom', 'call', 'n’t', 'name', \n",
+    "                                    'even', 'eleven', 'by', 'from', 'when', 'or', 'anyway', 'how', 'the', 'all', 'much',\n",
+    "                                    'another', 'since', 'hundred', 'serious', '‘ve', 'ever', 'out', 'full', 'themselves', \n",
+    "                                    'been', 'in', \"'d\", 'wherever', 'part', 'someone', 'therein', 'can', 'seemed', 'hereby', \n",
+    "                                    'others', \"'s\", \"'re\", 'most', 'one', \"n't\", 'into', 'some', 'will', 'these', 'twenty', \n",
+    "                                    'here', 'as', 'nobody', 'also', 'along', 'than', 'anything', 'he', 'there', 'does', 'we', \n",
+    "                                    '’ll', 'latterly', 'are', 'ten', 'hers', 'should', 'they', '‘s', 'either', 'am', 'be', \n",
+    "                                    'perhaps', '’re', 'only', 'namely', 'sixty', 'made', \"'m\", 'always', 'those', 'have', \n",
+    "                                    'again', 'her', 'once', 'ours', 'herself', 'else', 'has', 'nine', 'more', 'sometimes', \n",
+    "                                    'your', 'yours', 'that', 'around', 'his', 'indeed', 'mostly', 'cannot', '‘ll', 'too', \n",
+    "                                    'seems', '’m', 'himself', 'latter', 'whither', 'amount', 'other', 'nevertheless', 'whom', \n",
+    "                                    'for', 'somehow', 'beforehand', 'just', 'an', 'beyond', 'amongst', 'none', \"'ve\", 'say', \n",
+    "                                    'via', 'but', 'often', 're', 'our', 'because', 'rather', 'using', 'without', 'throughout',\n",
+    "                                    'on', 'she', 'never', 'eight', 'no', 'hereupon', 'them', 'whereafter', 'quite', 'which', \n",
+    "                                    'move', 'thru', 'until', 'afterwards', 'fifty', 'i', 'itself', 'n‘t', 'him', 'could', \n",
+    "                                    'front', 'within', '‘re', 'back', 'such', 'already', 'several', 'side', 'whence', 'me', \n",
+    "                                    'same', 'were', 'it', 'every', 'third', 'together']}\n",
+    "    \n",
+    "    df['Without Stop Words'] = df['Tweets'].apply(str.split)\n",
+    "    for i in range(len(df)):\n",
+    "        df['Without Stop Words'][i] = [item.lower() for item in df['Without Stop Words'][i] \n",
+    "                                       if item not in stop_words_dict['stopwords']]\n",
+    "        \n",
+    "    return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
