--- a/Analyse_Functions_Student-1519.ipynb
+++ b/Analyse_Functions_Student-1519.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4    18422  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "4  #ESKOMFREESTATE #MEDIASTATEMENT : ESKOM SUSPEN...  2019-11-29 12:17:43"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,12 +374,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items=[8842.0, 16156.0, 18422.0, 18730.0, 19261.0, 23532.0, 25275.0, 32127.0, 36024.0, 37416.0, 39488.0, 39660.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "### START FUNCTION\n",
     "def dictionary_of_metrics(items):\n",
+    "    \"\"\"This function returns the metrics as a dictionary. The metrics include:\n",
+    "    mean, median, maximum, minimum, standard deviation, variance\n",
+    "\n",
+    "    Parameters:\n",
+    "        items(list):list of intergers used to create a dictionary of metrics\n",
+    "\n",
+    "    Returns:\n",
+    "        dictionary of metrics rounded to two decimal place\n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
     "    mean=np.mean(items)\n",
     "    median=np.median(items)\n",
     "    items.sort()\n",
@@ -404,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +439,7 @@
        " 'max': 39660.0}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,26 +486,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "### START FUNCTION\n",
     "def five_num_summary(items):\n",
-    "    track = dictionary_of_metrics(gauteng)\n",
+    "    \"\"\"This function returns the five number summary as a dictionary. The five number summary includes:\n",
+    "    , median, maximum, minimum, quartile 1 and 3\n",
     "    \n",
-    "    big = track['max']\n",
-    "    median = track['median']\n",
-    "    small = track['min']\n",
+    "    Parameters:\n",
+    "        items(list):list of intergers used to create a dictionary of five number summary\n",
+    "    \n",
+    "    Returns:\n",
+    "        returns a dictionary of five number summary rounded to two decimal place\n",
+    "    \"\"\"\n",
+    "\n",
+    "    median=np.median(items)\n",
+    "    small=min(items)\n",
+    "    big=max(items)\n",
     "    list2=sorted(items)\n",
-    "    firstquart= np.quantile(list2,0.25,interpolation='linear')\n",
-    "    lastquart= np.quantile(list2,0.75,interpolation='linear')\n",
+    "    firstquart= np.quantile(list2,0.25)\n",
+    "    lastquart= np.quantile(list2,0.75)\n",
     "    \n",
     "    dictionary={'max':round(big,2),\n",
     "               'median':round(median,2),\n",
     "               'min': round(small,2),\n",
     "               'q1':round(firstquart,2),\n",
-    "               'q2':round(lastquart,2)}\n",
+    "               'q3':round(lastquart,2)}\n",
     "        \n",
     "    return dictionary\n",
     "\n",
@@ -493,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -511,10 +540,10 @@
        " 'median': 24403.5,\n",
        " 'min': 8842.0,\n",
        " 'q1': 18653.0,\n",
-       " 'q2': 36372.0}"
+       " 'q3': 36372.0}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -582,6 +611,16 @@
    "source": [
     "### START FUNCTION\n",
     "def date_parser(dates):\n",
+    "    \"\"\"The function takes in the date in one format and converts it to another format\n",
+    "    \n",
+    "    Parameters:\n",
+    "        dates(list):The list to be parsed\n",
+    "    \n",
+    "    Returns:\n",
+    "    The list of the parsed dates\n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "    truth=[]\n",
     "    for i in dates:\n",
     "        prince=i.split(' ')\n",
@@ -593,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +641,7 @@
        "['2019-11-29', '2019-11-29', '2019-11-29']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -660,6 +699,18 @@
    "outputs": [],
    "source": [
     "### START FUNCTION\n",
+    "def extract_municipality_hashtags(df):\n",
+    "    \"\"\"Returns a dataframe with an added column of extracted hashtags from each tweet and an added column\n",
+    "    of the municipality mentioned in each tweet\n",
+    "    \n",
+    "    Parameters:\n",
+    "        df(DataFrame):DataFrame which contains the hashtags and municipalities to be identified\n",
+    "    \n",
+    "    Returns: \n",
+    "        The DataFrame with added columns of the identified hashtags and municipalities\n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "def extract_municipality_hashtags(df):\n",
     "    \n",
     "    municipality_dict = { '@CityofCTAlerts' : 'Cape Town',\n",
@@ -684,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +878,7 @@
        "[200 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -972,6 +1023,16 @@
    "source": [
     "### START FUNCTION\n",
     "def number_of_tweets_per_day(df):\n",
+    "    \"\"\"The function counts the number of tweets for a specific date in the dataframe \n",
+    "    \n",
+    "    Parameters:\n",
+    "        df(DataFrame): The DataFrame which contains the tweets(and the dates) to be counted\n",
+    "    \n",
+    "    Returns:\n",
+    "        DataFrame with the column of dates as well as the number of the tweets on that date\n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "   #checking the no. of tweets a day\n",
     "    df['Date']=df['Date'].apply(lambda x : x.split(' ')[0])\n",
     "    nasty=df.drop(columns=['Date'],axis=1)\n",
@@ -983,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1135,7 @@
        "2019-11-29      16"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1184,7 +1245,19 @@
    "outputs": [],
    "source": [
     "### START FUNCTION\n",
+    "\n",
     "def word_splitter(df):\n",
+    "    \"\"\"The function splits a sentence into a list of individual words by taking in a DataFrame with a new column of a list of\n",
+    "    individual words\n",
+    "    \n",
+    "    Parameters:\n",
+    "        df(DataFrame):DataFrame which contains the tweets that need to be split\n",
+    "    \n",
+    "    Returns:\n",
+    "        DataFrame of the split tweets in a new column\n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "    df['Split Tweets']=df['Tweets'].str.split(' ')\n",
     "    df['Split Tweets']=df['Split Tweets'].apply(lambda x: list(map(str.lower,x)))\n",
     "    return df\n",
@@ -1193,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1292,7 @@
        "      <th></th>\n",
        "      <th>Tweets</th>\n",
        "      <th>Date</th>\n",
-       "      <th>Split_tweets</th>\n",
+       "      <th>Split Tweets</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1308,7 +1381,7 @@
        "198  @MuthambiPaulina @SABCNewsOnline @IOL @eNCA @e...  2019-11-20 10:07:41   \n",
        "199  RT @GP_DHS: The @GautengProvince made a commit...  2019-11-20 10:00:09   \n",
        "\n",
-       "                                          Split_tweets  \n",
+       "                                          Split Tweets  \n",
        "0    [@bongadlulane, please, send, an, email, to, m...  \n",
        "1    [@saucy_mamiie, pls, log, a, call, on, 0860037...  \n",
        "2    [@bongadlulane, query, escalated, to, media, d...  \n",
@@ -1324,7 +1397,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1460,48 +1533,22 @@
    "source": [
     "### START FUNCTION\n",
     "def stop_words_remover(df):\n",
-    "\n",
     "    \n",
-    "    stop_words_dict = {'stopwords':['where', 'done', 'if', 'before', 'll', 'very', 'keep', 'something', 'nothing',\n",
-    "                                    'thereupon', 'may', 'why', '’s', 'therefore', 'you', 'with', 'towards', 'make', \n",
-    "                                    'really', 'few', 'former', 'during', 'mine', 'do', 'would', 'of', 'off', 'six', \n",
-    "                                    'yourself', 'becoming', 'through', 'seeming', 'hence', 'us', 'anywhere', 'regarding', \n",
-    "                                    'whole', 'down', 'seem', 'whereas', 'to', 'their', 'various', 'thereafter', '‘d', \n",
-    "                                    'above', 'put', 'sometime', 'moreover', 'whoever', 'although', 'at', 'four', 'each', \n",
-    "                                    'among', 'whatever', 'any', 'anyhow', 'herein', 'become', 'last', 'between', 'still',\n",
-    "                                    'was', 'almost', 'twelve', 'used', 'who', 'go', 'not', 'enough', 'well', '’ve', 'might',\n",
-    "                                    'see', 'whose', 'everywhere', 'yourselves', 'across', 'myself', 'further', 'did', 'then', \n",
-    "                                    'is', 'except', 'up', 'take', 'became', 'however', 'many', 'thence', 'onto', '‘m', 'my',\n",
-    "                                    'own', 'must', 'wherein', 'elsewhere', 'behind', 'becomes', 'alone', 'due', 'being',\n",
-    "                                    'neither', 'a', 'over', 'beside', 'fifteen', 'meanwhile', 'upon', 'next', 'forty', \n",
-    "                                    'what', 'less', 'and', 'please', 'toward', 'about', 'below', 'hereafter', 'whether', \n",
-    "                                    'yet', 'nor', 'against', 'whereupon', 'top', 'first', 'three', 'show', 'per', 'five', \n",
-    "                                    'two', 'ourselves', 'whenever', 'get', 'thereby', 'noone', 'had', 'now', 'everyone', \n",
-    "                                    'everything', 'nowhere', 'ca', 'though', 'least', 'so', 'both', 'otherwise', 'whereby', \n",
-    "                                    'unless', 'somewhere', 'give', 'formerly', '’d', 'under', 'while', 'empty', 'doing', \n",
-    "                                    'besides', 'thus', 'this', 'anyone', 'its', 'after', 'bottom', 'call', 'n’t', 'name', \n",
-    "                                    'even', 'eleven', 'by', 'from', 'when', 'or', 'anyway', 'how', 'the', 'all', 'much',\n",
-    "                                    'another', 'since', 'hundred', 'serious', '‘ve', 'ever', 'out', 'full', 'themselves', \n",
-    "                                    'been', 'in', \"'d\", 'wherever', 'part', 'someone', 'therein', 'can', 'seemed', 'hereby', \n",
-    "                                    'others', \"'s\", \"'re\", 'most', 'one', \"n't\", 'into', 'some', 'will', 'these', 'twenty', \n",
-    "                                    'here', 'as', 'nobody', 'also', 'along', 'than', 'anything', 'he', 'there', 'does', 'we', \n",
-    "                                    '’ll', 'latterly', 'are', 'ten', 'hers', 'should', 'they', '‘s', 'either', 'am', 'be', \n",
-    "                                    'perhaps', '’re', 'only', 'namely', 'sixty', 'made', \"'m\", 'always', 'those', 'have', \n",
-    "                                    'again', 'her', 'once', 'ours', 'herself', 'else', 'has', 'nine', 'more', 'sometimes', \n",
-    "                                    'your', 'yours', 'that', 'around', 'his', 'indeed', 'mostly', 'cannot', '‘ll', 'too', \n",
-    "                                    'seems', '’m', 'himself', 'latter', 'whither', 'amount', 'other', 'nevertheless', 'whom', \n",
-    "                                    'for', 'somehow', 'beforehand', 'just', 'an', 'beyond', 'amongst', 'none', \"'ve\", 'say', \n",
-    "                                    'via', 'but', 'often', 're', 'our', 'because', 'rather', 'using', 'without', 'throughout',\n",
-    "                                    'on', 'she', 'never', 'eight', 'no', 'hereupon', 'them', 'whereafter', 'quite', 'which', \n",
-    "                                    'move', 'thru', 'until', 'afterwards', 'fifty', 'i', 'itself', 'n‘t', 'him', 'could', \n",
-    "                                    'front', 'within', '‘re', 'back', 'such', 'already', 'several', 'side', 'whence', 'me', \n",
-    "                                    'same', 'were', 'it', 'every', 'third', 'together']}\n",
+    "    \"\"\" The function removes stop words from tweets and returns those tweets as a list without the stop words\n",
+    "    \n",
+    "    Parameters:\n",
+    "        df(DataFrame): The Dataframe of tweets which will have it's stop words removed\n",
+    "        \n",
+    "    Returns:\n",
+    "        df(DataFrame): Returns a DataFrame with an added column of a list of tweets with the stop words removed\n",
+    "    \n",
+    "    \"\"\"\n",
+    "def stop_words_remover(df):\n",
     "    \n",
     "    df['Without Stop Words'] = df['Tweets'].apply(str.split)\n",
     "    for i in range(len(df)):\n",
     "        df['Without Stop Words'][i] = [item.lower() for item in df['Without Stop Words'][i] \n",
-    "                                       if item not in stop_words_dict['stopwords']]\n",
-    "        \n",
+    "                                       if item.lower() not in stop_words_dict['stopwords']]\n",
     "    return df\n",
     "\n",
     "### END FUNCTION"
@@ -1509,8 +1556,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1543,7 +1592,7 @@
        "      <td>0</td>\n",
        "      <td>@BongaDlulane Please send an email to mediades...</td>\n",
        "      <td>2019-11-29 12:50:54</td>\n",
-       "      <td>[@bongadlulane, please, send, email, mediadesk...</td>\n",
+       "      <td>[@bongadlulane, send, email, mediadesk@eskom.c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -1561,7 +1610,7 @@
        "      <td>3</td>\n",
        "      <td>Before leaving the office this afternoon, head...</td>\n",
        "      <td>2019-11-29 12:33:36</td>\n",
-       "      <td>[before, leaving, office, afternoon,, heading,...</td>\n",
+       "      <td>[leaving, office, afternoon,, heading, weekend...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -1591,7 +1640,7 @@
        "      <td>197</td>\n",
        "      <td>@ArthurGodbeer Is the power restored as yet?</td>\n",
        "      <td>2019-11-20 10:07:59</td>\n",
-       "      <td>[@arthurgodbeer, is, power, restored, yet?]</td>\n",
+       "      <td>[@arthurgodbeer, power, restored, yet?]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>198</td>\n",
@@ -1603,7 +1652,7 @@
        "      <td>199</td>\n",
        "      <td>RT @GP_DHS: The @GautengProvince made a commit...</td>\n",
        "      <td>2019-11-20 10:00:09</td>\n",
-       "      <td>[rt, @gp_dhs:, the, @gautengprovince, commitme...</td>\n",
+       "      <td>[rt, @gp_dhs:, @gautengprovince, commitment, e...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1625,22 +1674,22 @@
        "199  RT @GP_DHS: The @GautengProvince made a commit...  2019-11-20 10:00:09   \n",
        "\n",
        "                                    Without Stop Words  \n",
-       "0    [@bongadlulane, please, send, email, mediadesk...  \n",
+       "0    [@bongadlulane, send, email, mediadesk@eskom.c...  \n",
        "1                [@saucy_mamiie, pls, log, 0860037566]  \n",
        "2      [@bongadlulane, query, escalated, media, desk.]  \n",
-       "3    [before, leaving, office, afternoon,, heading,...  \n",
+       "3    [leaving, office, afternoon,, heading, weekend...  \n",
        "4    [#eskomfreestate, #mediastatement, :, eskom, s...  \n",
        "..                                                 ...  \n",
        "195  [eskom's, visitors, centres’, facilities, incl...  \n",
        "196  [#eskom, connected, 400, houses, process, conn...  \n",
-       "197        [@arthurgodbeer, is, power, restored, yet?]  \n",
+       "197            [@arthurgodbeer, power, restored, yet?]  \n",
        "198  [@muthambipaulina, @sabcnewsonline, @iol, @enc...  \n",
-       "199  [rt, @gp_dhs:, the, @gautengprovince, commitme...  \n",
+       "199  [rt, @gp_dhs:, @gautengprovince, commitment, e...  \n",
        "\n",
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
